# models/cart.model.js
@@ -1,0 +1,25 @@
+const { sequelize, Sequelize } = require(".");
+
+module.exports = (sequelize, Sequelize) => {
+  const Cart = sequelize.define("cart", {
+    cart_id: {
+      type: Sequelize.INTEGER,
+      primaryKey: true,
+      autoIncrement: true,
+    },
+
+    product_id: {
+      type: Sequelize.INTEGER,
+    },
+
+    user_id: {
+      type: Sequelize.INTEGER,
+    },
+
+    status: {
+      type: Sequelize.STRING,
+    },
+  });
+
+  return Cart;
+};
